# slateduck

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  deny.toml  mkdocs.yml  requirements-docs.txt  slatedb-ducklake.md
bindings/nodejs/: Cargo.toml  index.d.ts  index.js  package.json
bindings/nodejs/examples/: quickstart.js
bindings/nodejs/src/: lib.rs
bindings/nodejs/test/: test_catalog.js
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/examples/: quickstart.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_catalog.py
crates/rocklake-catalog/: Cargo.toml
crates/rocklake-catalog/benches/: catalog_bench.rs
crates/rocklake-catalog/src/: audit.rs  cdc.rs  checkpoint.rs  cleanup.rs  corpus.rs  cost.rs  diagnose.rs  encryption.rs  error.rs  excise.rs  export.rs  extension.rs  fault_injection.rs  gc.rs  init.rs  inspect.rs  key_migration.rs  lease.rs  lib.rs  manifest.rs  metrics.rs  migrate.rs  migrate_from_ducklake.rs  partition.rs  performance.rs  reader.rs  readonly.rs  repair.rs  store.rs  streaming.rs  sweep.rs  verify.rs  warmup.rs
crates/rocklake-catalog/tests/: backend_compat.rs  checkpoint_restore.rs  concurrent_writer_fencing.rs  fault_injection_tests.rs  integration_tests.rs  minio_catalog_tests.rs  v010_tests.rs  v019_tests.rs  v021_metrics_tests.rs  v024_tests.rs  v025_tests.rs  v026_tests.rs  v02712_backend_compat_tests.rs  v02712_conformance_tests.rs  v02713_mvcc_visibility_tests.rs  v0275_tests.rs  v0279_advanced_metadata_tests.rs  v027_tests.rs  v028_atomicity_tests.rs  v029_tests.rs  v032_tests.rs  v040_fault_injection_tests.rs  v041_migration_tests.rs  v042_bench_tests.rs  v043_scale_tests.rs  v047_readonly_tests.rs  v04_tests.rs  v05_tests.rs  v07_tests.rs  v091_tests.rs  v092_tests.rs  v093_tests.rs  v094_tests.rs  v09_tests.rs
crates/rocklake-client/: Cargo.toml  README.md
crates/rocklake-client/examples/: lambda_reader.rs
crates/rocklake-client/src/: lib.rs
crates/rocklake-core/: Cargo.toml
crates/rocklake-core/src/: clock.rs  counters.rs  keys.rs  lib.rs  path.rs  tags.rs  types.rs  values.rs
crates/rocklake-core/tests/: property_tests.rs
crates/rocklake-datafusion/: Cargo.toml
crates/rocklake-datafusion/benches/: datafusion_bridge.rs
crates/rocklake-datafusion/src/: catalog_provider.rs  lib.rs  virtual_catalog.rs
crates/rocklake-datafusion/tests/: client_integration_tests.rs  integration_tests.rs
crates/rocklake-ffi/: Cargo.toml  cbindgen.toml
crates/rocklake-ffi/include/: rocklake.h
crates/rocklake-ffi/src/: lib.rs
crates/rocklake-ffi/tests/: c_abi_smoke.rs
crates/rocklake-pgwire/: Cargo.toml
crates/rocklake-pgwire/src/: cli.rs  copy_parser.rs  error.rs  handler.rs  lib.rs  main.rs  schema_registry.rs  scram.rs  server.rs  session.rs  telemetry.rs
crates/rocklake-pgwire/tests/: compat_tests.rs  dialect_fuzz.rs  driver_compat.rs  duckdb_binary_tests.rs  integration_tests.rs  pgwire_network_test.rs  security_tests.rs  v02710_corpus_tests.rs  v02714_security_protocol_tests.rs  v0271_cdc_tests.rs  v0274_postgres_scanner_tests.rs  v0275_conformance_tests.rs  v0276_lifecycle_tests.rs  v0277_schema_registry_tests.rs  v0278_atomicity_tests.rs  v0279_pgwire_tests.rs  v027_pgwire_tests.rs  v030_tests.rs  v036_sql_client_tests.rs  v039_observability_tests.rs  v040_security_tests.rs  v041_ducklake_compat_tests.rs  v046_cli_tests.rs  v047_drain_tests.rs
crates/rocklake-sql/: Cargo.toml
crates/rocklake-sql/src/: error.rs  lib.rs  table_changes.rs
crates/rocklake-sql/tests/: cdc_parquet_roundtrip.rs  classifier_v021_tests.rs  v0274_classifier_tests.rs
crates/rocklake-testkit/: Cargo.toml
crates/rocklake-testkit/src/: azure_emulator_harness.rs  backend_compat.rs  catalog_harness.rs  clock.rs  duckdb_harness.rs  gcs_emulator_harness.rs  lib.rs  minio_harness.rs  pgwire_harness.rs  soak_harness.rs
crates/slateduck-catalog/: Cargo.toml
crates/slateduck-catalog/benches/: catalog_bench.rs
crates/slateduck-catalog/src/: audit.rs  cache.rs  cdc.rs  checkpoint.rs  cleanup.rs  cost.rs  encryption.rs  error.rs  excise.rs  export.rs  extension.rs  gc.rs  init.rs  inspect.rs  key_migration.rs  lease.rs  lib.rs  manifest.rs  metrics.rs  partition.rs  performance.rs  reader.rs  repair.rs  store.rs  streaming.rs  verify.rs  wal.rs  writer.rs
crates/slateduck-catalog/tests/: checkpoint_restore.rs  concurrent_writer_fencing.rs  integration_tests.rs  minio_catalog_tests.rs  v010_tests.rs  v011_tests.rs  v019_tests.rs  v021_metrics_tests.rs  v024_tests.rs  v025_tests.rs  v026_tests.rs  v0275_tests.rs  v027_tests.rs  v04_tests.rs  v05_tests.rs  v07_tests.rs  v091_tests.rs  v092_tests.rs  v093_tests.rs  v094_tests.rs  v09_tests.rs
crates/slateduck-datafusion/: Cargo.toml
crates/slateduck-datafusion/benches/: datafusion_bridge.rs
crates/slateduck-datafusion/src/: catalog_provider.rs  lib.rs
crates/slateduck-datafusion/tests/: integration_tests.rs
crates/slateduck-ivm/: Cargo.toml
crates/slateduck-ivm/benches/: circuit_bench.rs
crates/slateduck-ivm/src/: backpressure.rs  circuit.rs  config.rs  heartbeat.rs  join.rs  lib.rs  observability.rs  output.rs  parquet.rs  plan.rs  ref_counted.rs  shard_key.rs  shutdown.rs  source.rs  state_store.rs  trace.rs  wasm_udf.rs  worker.rs
crates/slateduck-ivm/tests/: distinct_property_tests.proptest-regressions  distinct_property_tests.rs  join_tests.rs  scale_tests.rs  sharded_tests.rs  wasm_udf_tests.rs
crates/slateduck-pgwire/: Cargo.toml
crates/slateduck-pgwire/src/: error.rs  error_mapping.rs  executor.rs  handler.rs  lib.rs  main.rs  notify.rs  pg_types.rs  schema_registry.rs  server.rs  session.rs  types.rs
crates/slateduck-pgwire/tests/: compat_tests.rs  duckdb_binary_tests.rs  integration_tests.rs  pgwire_e2e.rs  pgwire_network_test.rs  security_tests.rs  (+5 more)
crates/slateduck-sql/: Cargo.toml
crates/slateduck-sqlite-vfs/: Cargo.toml
crates/slateduck-testkit/: Cargo.toml
extension/: CMakeLists.txt
extension/include/: rocklake.h
extension/src/: rocklake_extension.cpp
(+286 files in other folders)
