[workspace]
members = [
    "crates/slateduck-core",
    "crates/slateduck-catalog",
    "crates/slateduck-sql",
    "crates/slateduck-sqlite-vfs",
    "crates/slateduck-pgwire",
    "crates/slateduck-ffi",
    "crates/slateduck-datafusion",
    "crates/slateduck-ivm",
    "crates/slateduck-testkit",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.93"
license = "Apache-2.0"
repository = "https://github.com/trickle-labs/slateduck"

[workspace.dependencies]
# Storage
slatedb = "0.13"
object_store = { version = "0.12", features = ["aws", "gcp", "azure"] }
bytes = "1"

# Encryption
aes-gcm = "0.10"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
prost-types = "0.13"
base64 = "0.22"

# SQL parsing
sqlparser = { version = "0.55", features = ["visitor"] }

# PG wire protocol
pgwire = "0.28"

# IVM engine (hand-rolled Z-difference shim; see docs/design-decisions/ivm-architecture.md)
# WASM UDF execution — pinned to wasmtime 43.x (fuel API stable within major)
wasmtime = "43"

# Testing
proptest = "1"
tempfile = "3"
criterion = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
tokio-postgres = "0.7"

# DataFusion
datafusion = "45"
