[workspace]
members = [
    "crates/rocklake-core",
    "crates/rocklake-catalog",
    "crates/rocklake-sql",
    "crates/rocklake-pgwire",
    "crates/rocklake-ffi",
    "crates/rocklake-client",
    "crates/rocklake-datafusion",
    "crates/rocklake-testkit",
]
resolver = "2"

[workspace.package]
version = "0.45.0"
edition = "2021"
rust-version = "1.93"
license = "Apache-2.0"
repository = "https://github.com/trickle-labs/rocklake"

[workspace.dependencies]
# Storage
slatedb = "0.13"
object_store = { version = "0.12" }
bytes = "1"

# Encryption
aes-gcm = "0.10"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net", "fs", "signal", "process"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
prost-types = "0.13"
base64 = "0.22"

# SQL parsing
sqlparser = { version = "0.55", features = ["visitor"] }

# PG wire protocol
pgwire = "0.28"

# Testing
proptest = "1"
tempfile = "3"
criterion = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
tokio-postgres = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }

# DataFusion
datafusion = "45"
