[package]
name = "rocklake-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
## Enable GCS emulator integration tests (requires Docker with fake-gcs-server).
gcs-emulator = ["rocklake-testkit/gcs-emulator"]
## Enable Azure Blob Storage emulator integration tests (requires Docker with Azurite).
azure-emulator = ["rocklake-testkit/azure-emulator"]

[dependencies]
rocklake-core = { path = "../rocklake-core" }
slatedb = { workspace = true }
object_store = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
prost = { workspace = true }
aes-gcm = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
rocklake-ffi = { path = "../rocklake-ffi" }
rocklake-datafusion = { path = "../rocklake-datafusion" }
rocklake-sql = { path = "../rocklake-sql" }
rocklake-testkit = { path = "../rocklake-testkit" }
serde_json = { workspace = true }
datafusion = "45"

[[bench]]
name = "catalog_bench"
harness = false
