[package]
name = "rocklake-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
slatedb = { workspace = true }
object_store = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
futures = "0.3"
