[package]
name = "rocklake-sql"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlparser = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
object_store = { workspace = true }
parquet = { version = "54", features = ["arrow"] }
arrow = { version = "54" }
tokio = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
parquet = { version = "54", features = ["arrow"] }
arrow = { version = "54", features = ["ipc"] }
