[package]
name = "rocklake-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
## Enable GCS emulator integration tests (requires Docker with fake-gcs-server).
gcs-emulator = ["object_store/gcp"]
## Enable Azure Blob Storage emulator integration tests (requires Docker with Azurite).
azure-emulator = ["object_store/azure"]

[dependencies]
rocklake-core    = { path = "../rocklake-core" }
rocklake-catalog = { path = "../rocklake-catalog" }
rocklake-pgwire  = { path = "../rocklake-pgwire" }

tokio        = { workspace = true }
tempfile     = { workspace = true }
object_store = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
proptest      = { workspace = true }
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
chrono       = { workspace = true }
