[package]
name = "slateduck-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
slateduck-core = { path = "../slateduck-core" }
slatedb = { workspace = true }
object_store = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
prost = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "catalog_bench"
harness = false
