[package]
name = "slateduck-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
slateduck-core = { path = "../slateduck-core" }
slatedb = { workspace = true }
object_store = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
prost = { workspace = true }
aes-gcm = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
slateduck-ffi = { path = "../slateduck-ffi" }
slateduck-datafusion = { path = "../slateduck-datafusion" }
slateduck-ivm = { path = "../slateduck-ivm" }
slateduck-sql = { path = "../slateduck-sql" }
serde_json = { workspace = true }
datafusion = "45"

[[bench]]
name = "catalog_bench"
harness = false
