[package]
name = "slateduck-ivm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
slateduck-core   = { path = "../slateduck-core" }
slateduck-catalog = { path = "../slateduck-catalog" }
slateduck-sql    = { path = "../slateduck-sql" }

slatedb          = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }
thiserror        = { workspace = true }
sqlparser        = { workspace = true }
wasmtime         = { workspace = true }
base64           = "0.22"
clap             = { version = "4", features = ["derive", "env"] }
tracing-subscriber = { workspace = true }

[[bin]]
name = "slateduck-ivm"
path = "src/bin/slateduck_ivm.rs"

[dev-dependencies]
object_store       = { workspace = true }
serde_json         = { workspace = true }
slateduck-testkit  = { path = "../slateduck-testkit" }
proptest           = { workspace = true }
tempfile           = { workspace = true }
tokio              = { workspace = true }
