[package]
name = "slateduck-pgwire"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
slateduck-core = { path = "../slateduck-core" }
slateduck-catalog = { path = "../slateduck-catalog" }
slateduck-sql = { path = "../slateduck-sql" }
pgwire = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
