[package]
name = "slateduck-pgwire"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "slateduck"
path = "src/main.rs"

[dependencies]
slateduck-core = { path = "../slateduck-core" }
slateduck-catalog = { path = "../slateduck-catalog" }
slateduck-sql = { path = "../slateduck-sql" }
slatedb = { workspace = true }
pgwire = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
object_store = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio-rustls = "0.26"
rustls-pemfile = "2"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
rcgen = "0.13"
tokio-rustls = "0.26"
serde_json = { workspace = true }
object_store = { workspace = true }
