[package]
name = "slateduck-sql"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlparser = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
