[package]
name = "slateduck-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
slateduck-core    = { path = "../slateduck-core" }
slateduck-catalog = { path = "../slateduck-catalog" }
slateduck-ivm     = { path = "../slateduck-ivm" }

tokio    = { workspace = true }
tempfile = { workspace = true }
object_store = { workspace = true }
